administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -147,6 +147,16 @@ div#g-recaptcha {
     display: none;
 }
 
+body.dragover{
+    .ui-view.files-letters,
+    .ui-view.files-permits,
+    .ui-view.files-agreements,
+    .ui-view.files-other{
+        display: block;
+    }
+}
+
+
 
 div.field-value-module.inline {
     display: table-cell;
