administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -8,7 +8,9 @@ $tagBtnColor:#e1e1e1;
 $mainStyleColor:#525252;
 $highlightBtnColor:$mainStyleColor;
 
-
+body.body-overlayed>#viewControllerApp>div>div>.ui-view {
+    filter: blur(5px) grayscale(1);
+}
 
 button.primary-btn.nav-new-btn{
 
