--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1082,6 +1082,12 @@ button.inline-logout {
     left: -5px;
 }
 
+[data-view="singleFileListItemDetail"] ul.item-tags {
+    position: absolute;
+    top: 10px;
+    right: 100px;
+}
+
 
 .percent-complete {
     width: calc( 50% - 20px );
