--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -173,7 +173,7 @@ $mainStyleColor:#efa82c;
 }
 
 
-[data-view="tasksOverviewListDetail"] {
+[data-view="tasksOverviewListDetail"], [data-view="projectsOverviewDetail"] {
 
     .section-title {
         background-color: rgba(255, 255, 255, 0.1);
@@ -182,6 +182,11 @@ $mainStyleColor:#efa82c;
     
     .filter-btns .sort{
        margin-top: 7px;
+    }
+    
+    
+    .ui-view.active-project {
+        background-color: transparent;
     }
 }
 
