--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -177,6 +177,17 @@ $mainStyleColor:#efa82c;
 
     .section-title {
         background-color: rgba(255, 255, 255, 0.1);
+    }
+
+
+    .ui-view.active-project {
+        background-color: transparent;
+    }
+}
+
+[data-view="tasksOverviewListDetail"] {
+
+    .section-title {
         margin-top:100px;
     }
     
@@ -184,10 +195,6 @@ $mainStyleColor:#efa82c;
        margin-top: 7px;
     }
     
-    
-    .ui-view.active-project {
-        background-color: transparent;
-    }
 }
 
 
