--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -179,7 +179,7 @@ $mainStyleColor:#efa82c;
         background-color: rgba(255, 255, 255, 0.1);
     }
  .filter-btns .sort, button.inline-btn.add.primary-btn{
-       margin-top: 7px;
+       margin-top: 7px !important;
     }
 
     .ui-view.active-project {
