administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -78,7 +78,7 @@ $mainStyleColor:#efa82c;
     }
 
     &.pb-c.pb-c-append {
-        background-color: $darkThemeInset;
+        background-color:#484848;
         color:$fontColor;
     }
 
