administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -10,6 +10,12 @@ $fontColor:#e0e0e2;
 $mainStyleColor:#efa82c;
 
 .dark{
+    
+    
+    ::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+}
+    
     .pb-w .template-footer{
         background-color: $darkThemeBG;
     }
