--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -14,6 +14,7 @@ $mainStyleColor:#efa82c;
     .WizardTitle li {
         border-color: transparent;
         background-color: rgba(0, 0, 0, 0.2);
+        color:white;
     }
     
     .WizardTitle li.current{
