--- a/app/Generated Style Script.customCSS.css
+++ b/app/Generated Style Script.customCSS.css
@@ -87,7 +87,7 @@ foreach(array("permit", "agreement", "letter", "document", "spatial", "other") a
     
     ?>
    
-    .add-<?php echo $type;?>s .upload-btns span.document{
+    .add-<?php echo $type;?>s .upload-btns span.document, .add-<?php echo $type;?>s .upload-btns span.layer{
         background-image: url("<?php echo UrlFrom($config->getParameter($type)[0]."?tint=".$config->getParameter($type."Tint","rgb(0,0,0)")); ?>");
     }
     
