administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -2355,7 +2355,7 @@ button.inline-btn.add:hover{
 }
 
 
-.ui-view.priority-high:before {
+.ui-view.priority-high:before, .ui-view.priority:before {
     width: 4px;
     height: 100%;
     background-color: crimson;
