administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -433,7 +433,9 @@ button.primary-btn.nav-new-btn:hover {
 
 
 
-
+.inline-btn.sort.hasFilter li, .inline-btn.sort.hasOrder li {
+    color: black;
+}
 
 .navigation-menu .menu-main li{
 
