administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -175,7 +175,7 @@ div.field-value-module.inline {
 }
 
 .gct3 .project-list-filters .filter {
-    display: none;
+    /*display: none;*/
 }
 
 .gct3 .project-list-filters .sort {
