administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -453,5 +453,10 @@ button.primary-btn.nav-new-btn:hover {
     }
 }
 
-
+.field-value-module.item-icon.left-icons .user-profile-icon {
+    position: absolute;
+    left: 15px;
+    width: 30px;
+    height: 30px;
+}
 
