--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -460,3 +460,17 @@ button.primary-btn.nav-new-btn:hover {
     height: 30px;
 }
 
+
+
+.navigation-menu li.menu-main-datasets:before {
+    content: "\f1c0";
+}
+
+.navigation-menu li.menu-main-projects:before {
+    content: "\f1b3";
+}
+
+
+
+
+
