administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -470,6 +470,10 @@ button.primary-btn.nav-new-btn:hover {
     content: "\f1b3";
 }
 
+.projects-list .field-value-module {
+    font-size: 14px;
+    font-family: Arial;
+}
 
 
 
