administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -29,6 +29,11 @@ button.primary-btn.nav-new-btn{
     font-size: 18px;
     color: #2d2d2d;
     
+    
+    &.btn-index-1 {
+        margin-top: 0;
+    }
+        
 
     &:before {
         content: "+ ";
