administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1928,7 +1928,7 @@ button.primary-btn, .WizardButton, .WizardTitle li, .t-btn {}
     vertical-align: top;
 }
 button.primary-btn.error {
-    background-color: red;
+    background-color: crimson;
 }
 button.primary-btn.warn {
     background-color: #EDC84C;
