administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -437,7 +437,16 @@ button.primary-btn.nav-new-btn:hover {
     color: black;
 }
 
+
+
 .navigation-menu .menu-main li{
+    
+    &.menu-main-projects {
+        display: none;
+        &.menu-main-datasets, &.menu-main-collections{
+            display:list-item;
+        }
+    }
 
     &.menu-main-reports {
         display: none;
