--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -485,5 +485,13 @@ button.primary-btn.nav-new-btn:hover {
 }
 
 
-
+.drag-area {
+    border: 1px dashed cornflowerblue;
+    background-color: rgba(0,0,0,0.05);
+    padding: 15px;
+    font-size: 15px;
+    font-weight: 100;
+    border-radius: 4px;
+    margin: 15px 0px;
+}
 
