administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -471,11 +471,11 @@ button.primary-btn.nav-new-btn:hover {
 
 
 
-.navigation-menu li.menu-main-datasets:before {
+.navigation-menu li.menu-main-projects.menu-main-datasets:before {
     content: "\f1c0";
 }
 
-.navigation-menu li.menu-main-projects:before {
+.navigation-menu li.menu-main-projects.menu-main-projects:before {
     content: "\f1b3";
 }
 
