administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -475,7 +475,7 @@ button.primary-btn.nav-new-btn:hover {
     content: "\f1c0";
 }
 
-.navigation-menu li.menu-main-projects.menu-main-projects:before {
+.navigation-menu li.menu-main-projects.menu-main-collections:before {
     content: "\f1b3";
 }
 
