administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -2,6 +2,20 @@
 $highlightBtnColor:#ff0258;
 
 
+.ui-view.test.dashboard-main.gct3:after {
+    background-position: center;
+    background-image: url(https://dyl2vw577xcfk.cloudfront.net/gather.geoforms.ca/1/Uploads/%5BImAgE%5D_5ju_lgQ_%5BG%5D_cHZ.jpeg);
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    background-size: cover;
+}
+
+
 [data-view="tagsDetail"] .section-module {
     min-height: 55px;
 }
