--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -14,6 +14,12 @@ $highlightBtnColor:#ff0258;
     opacity: 0.3;
     background-size: cover;
 }
+ui-view.test.dashboard-main.gct3
+    .ui-view.login-form {
+        background-color: rgba(255,255,255,0.7);
+        border-radius: 4px;
+    }
+}
 
 
 [data-view="tagsDetail"] .section-module {
