administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -3,13 +3,13 @@ $highlightBtnColor:#ff0258;
 
 
 
-ui-view.test.dashboard-main.gct3{
-    .ui-view.login-form {
+.dashboard-main.gct3{
+    .login-form {
         background-color: rgba(255,255,255,0.7);
         border-radius: 4px;
     }
     
-    .ui-view.login-form:after {
+    .login-form:after {
         background-position: center;
         background-image: url(https://dyl2vw577xcfk.cloudfront.net/gather.geoforms.ca/1/Uploads/%5BImAgE%5D_5ju_lgQ_%5BG%5D_cHZ.jpeg);
         content: "";
