--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -4,9 +4,12 @@ $highlightBtnColor:#ff0258;
 
 
 .dashboard-main.gct3{
+    
     .login-form {
         background-color: rgba(255,255,255,0.7);
         border-radius: 4px;
+        z-index:1;
+        position:relative;
     }
     
     .login-form:after {
@@ -21,6 +24,7 @@ $highlightBtnColor:#ff0258;
         opacity: 0.3;
         background-size: cover;
         pointer-events:none;
+        z-index:-1;
     }
 }
 
