--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -6,9 +6,6 @@ $highlightBtnColor:#ff0258;
 .dashboard-main.gct3{
     
     .login-form {
-        background-color: rgba(255,255,255,0.7);
-        border-radius: 4px;
-        z-index:1;
         position:relative;
     }
     
@@ -26,6 +23,33 @@ $highlightBtnColor:#ff0258;
         pointer-events:none;
         z-index:-1;
     }
+    
+    
+    .login-form:after {
+          background-color: rgba(255, 255, 255, 0.7);
+          border-radius: 4px;
+          position: absolute;
+          content:"";
+          width:100%;
+          height:100%;
+          top: 0;
+          left: 0;
+          z-index: -1;
+         }
+        .login-form:before {
+          background-position: center;
+          background-image: url(https://dyl2vw577xcfk.cloudfront.net/gather.geoforms.ca/1/Uploads/%5BImAgE%5D_5ju_lgQ_%5BG%5D_cHZ.jpeg);
+          content: "";
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0.3;
+          background-size: cover;
+          pointer-events: none;
+          z-index: -1; }
+    
 }
 
 
