--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -548,12 +548,14 @@ button.primary-btn.nav-new-btn:hover {
         position: absolute;
         top: 20px;
         right: 20px;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         border: none;
         border-radius: 100%;
         font-size: 0;
         padding: 0;
+        color: mediumseagreen;
+        cursor:pointer;
     }
 
 
