--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1,7 +1,16 @@
 
 $highlightBtnColor:#ff0258;
 
-
+span.notifications {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    background-color: rgba(0,0,0,0.1);
+    position: relative;
+    top: 9px;
+    cursor: pointer;
+    border-radius: 100%;
+}
 
 .dashboard-main.gct3{
     
