--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -12,6 +12,15 @@ span.notifications {
     border-radius: 100%;
 }
 
+span.notifications:after {
+    content: "\f075";
+    font-family: 'FontAwesome';
+    position: absolute;
+    left: 9px;
+    top: 5px;
+    color: #ff0258;
+}
+
 .dashboard-main.gct3{
     
     .login-form {
