administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -21,6 +21,10 @@ span.notifications:after {
     color: #ff0258;
 }
 
+[data-view="mainProjectsDetail"]>div>div>.ui-navigation-menu {
+    display: none;
+}
+
 .dashboard-main.gct3{
     
     .login-form {
