--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -13,68 +13,73 @@ $highlightBtnColor:#ff0258;
     color: white;
 
 
-textarea.text-input {
-    background-color: #2d4392;
-    border-radius: 14px;
-    border-color: rgba(255,255,255,0.2);
-    color: white;
-    text-indent: 10px;
-}
-
-.text-input::placeholder {
-    color: #b9b5b5;
-    font-style: italic;
-}
-
-
-h2 {
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-}
-
-button.WizardButton.btn {
-    background-color: #ff0258;
-}
-
-.WizardTitle li, .WizardTitle li.current {
-    background-color: #ff0258;
-    border: none;
-    border-radius: 21px;
-    padding: 10px 0;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    width: 41px;
-}
-
-
-
-.TagCloudModule .tag-cloud > span.tag-el {
-    border: 1px solid white;
-    border-radius: 28px;
-    font-weight: bold;
-}
-
-.TagCloudModule .tag-cloud > span.tag-el.selected {
-    background-color: #ff0258;
-    border-color: #ff0258;
-}
-
-.TagCloudModule .tag-cloud > span.tag-el.add-tag {
-    background-color: #ff0258;
-    opacity:0.7;
-    transform:scale(0.7)
-
-}
-
-.template-footer {
-    background-color: #0f1c4b;
-}
-
-&:after {
-    background-color: #0f1c4b;
-}
+    textarea.text-input {
+        background-color: #2d4392;
+        border-radius: 14px;
+        border-color: rgba(255,255,255,0.2);
+        color: white;
+        text-indent: 10px;
+    }
+    
+    .text-input::placeholder {
+        color: #b9b5b5;
+        font-style: italic;
+    }
+    
+    
+    h2 {
+        color: white;
+        font-weight: bold;
+        font-size: 25px;
+    }
+    
+    button.primary-btn.warn {
+        border-radius: 20px;
+    }
+    
+    button.WizardButton.btn {
+        background-color: #ff0258;
+        border-radius: 20px;
+    }
+    
+    .WizardTitle li, .WizardTitle li.current {
+        background-color: #ff0258;
+        border: none;
+        border-radius: 21px;
+        padding: 10px 0;
+        color: white;
+        font-weight: bold;
+        text-align: center;
+        width: 41px;
+    }
+    
+    
+    
+    .TagCloudModule .tag-cloud > span.tag-el {
+        border: 1px solid white;
+        border-radius: 28px;
+        font-weight: bold;
+    }
+    
+    .TagCloudModule .tag-cloud > span.tag-el.selected {
+        background-color: #ff0258;
+        border-color: #ff0258;
+    }
+    
+    .TagCloudModule .tag-cloud > span.tag-el.add-tag {
+        background-color: #ff0258;
+        opacity:0.7;
+        transform:scale(0.7)
+    
+    }
+    
+    .template-footer {
+        background-color: #0f1c4b;
+    }
+    
+    &:after {
+        background-color: #0f1c4b;
+    }
 
 
 }
