administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -82,6 +82,16 @@ $highlightBtnColor:#ff0258;
     }
 
 
+    .template-footer {
+        padding: 0 40px;
+        box-sizing: border-box;
+        padding-bottom: 20px;
+    }
+    
+    .pb-modules-viewer {
+        padding-bottom: 30px;
+    }
+
 }
 
 
