--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -3,7 +3,15 @@ $highlightBtnColor:#ff0258;
 
 
 
+.dataset-select .ui-view .field-value-module {
+    display: none;
+}
 
+.dataset-select .ui-view [data-col="name"], 
+.dataset-select .ui-view [data-col="user"],
+.dataset-select .ui-view [data-col="date"] {
+    display: inherit;
+}
 
 
 
