administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -83,6 +83,7 @@ $highlightBtnColor:#ff0258;
     
     .template-footer {
         background-color: #0f1c4b;
+        height:56px;
     }
     
     &:after {
