--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -10,7 +10,10 @@ $highlightBtnColor:#ff0258;
 .dataset-select .ui-view [data-col="name"], 
 .dataset-select .ui-view [data-col="user"],
 .dataset-select .ui-view [data-col="date"] {
-    display: inherit;
+    display: inline-block;
+    min-width: 150px;
+    height: 55px;
+    line-height: 55px;
 }
 a.pb-btn-close {
     background-image:none;
