administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1,7 +1,7 @@
 
 $highlightBtnColor:#ff0258;
 
-span.array-module.pending-status {
+span.pending-status {
     background-color: rgba(0,0,0,0.1);
     border-radius: 39px;
     display: inline-block;
