administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -127,7 +127,7 @@ a.pb-btn-close:after {
     
     
     .TagCloudModule .tag-cloud > span.tag-el {
-        border: 1px solid white;
+        border: 1px solid rgba(255,255,255,0.5);
         border-radius: 28px;
         font-weight: bold;
     }
