--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -130,6 +130,7 @@ a.pb-btn-close:after {
         border: 1px solid rgba(255,255,255,0.5);
         border-radius: 28px;
         font-weight: bold;
+        padding: 5px 20px;
     }
     
     .TagCloudModule .tag-cloud > span.tag-el.selected {
