--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -183,7 +183,7 @@ span.notifications {
 }
 
 span.notifications:after {
-    content: "\f075";
+    content: "\f0f3";
     font-family: 'FontAwesome';
     position: absolute;
     left: 9px;
