--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1,6 +1,12 @@
 
 $highlightBtnColor:#ff0258;
 
+
+.left-panel .application-logo {
+    background-position: 25px;
+}
+
+
 span.pending-status {
     background-color: rgba(0,0,0,0.1);
     border-radius: 39px;
