administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -222,7 +222,7 @@ span.notifications:after {
          }
         .login-form:before {
           background-position: center;
-          background-image: url(https://dyl2vw577xcfk.cloudfront.net/gather.geoforms.ca/1/Uploads/%5BImAgE%5D_5ju_lgQ_%5BG%5D_cHZ.jpeg);
+          background-image: url(https://dyl2vw577xcfk.cloudfront.net/gather.geoforms.ca/1/Uploads/%5BG%5D_Plu_%5BImAgE%5D_Z2G_XQ.jpeg);
           content: "";
           position: fixed;
           top: 0;
