--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -6,6 +6,20 @@ $highlightBtnColor:#ff0258;
     background-position: 25px;
 }
 
+span.section-icon {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 100%;
+    background-size: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    left: -10px;
+    top: 10px;
+}
+
 
 span.pending-status {
     background-color: rgba(0,0,0,0.1);
