administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -25,7 +25,7 @@ span.section-icon {
     color: black;
 }
 
-.inline-btn.sort.hasFilter, .inline-btn.sort.hasOrder {
+.inline-btn.sort.hasFilter, .inline-btn.sort.hasOrder, .inline-btn.sort.hasFilter {
     padding-right: 20px;
 }
 
