--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -12,6 +12,9 @@ body.body-overlayed>#viewControllerApp>div>div>.ui-view {
     filter: blur(5px) grayscale(1);
 }
 
+button:focus {outline:0;}
+
+
 button.primary-btn.nav-new-btn{
 
     
