administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -258,7 +258,7 @@ span.notifications:after {
          <?php 
             $config=GetWidget('dashboardConfig');
             ?>
-                background-image: url(<?php echo $config['backgroundImage'][0];?>);
+                background-image: url('<?php echo $config["backgroundImage"][0];?>');
 
             <?php
           ?>
