administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -179,7 +179,7 @@ div.field-value-module.inline {
 }
 
 .gct3 .project-list-btns {
-    display: none;
+    /*display: none;*/
 }
 
 .gct3 .project-list-filters .filter {
