--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -170,9 +170,16 @@ body.dragover{
 
 div.field-value-module.inline {
     display: table-cell;
-    min-width: 250px;
+    /*min-width: 250px;*/
+    
+    width: 250px;
+    max-width: 16%;
 }
 
+[data-view="singleProjectListItemTableDetail"], .table-header {
+    display: inline-block;
+    width: calc( 100% - 35px );
+}
 
 .inline.withItems .field-value {
     font-weight: bold;
