--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -132,12 +132,12 @@ a.pb-btn-close:after {
     }
     
     button.WizardButton.btn {
-        background-color: #ff0258;
+        background-color: $highlightBtnColor;
         border-radius: 20px;
     }
     
     .WizardTitle li.current {
-        background-color: #ff0258;
+        background-color: $highlightBtnColor;
         border: none;
         border-radius: 21px;
         padding: 10px 0;
@@ -168,12 +168,12 @@ a.pb-btn-close:after {
     }
     
     .TagCloudModule .tag-cloud > span.tag-el.selected {
-        background-color: #ff0258;
-        border-color: #ff0258;
+        background-color: $highlightBtnColor;
+        border-color: $highlightBtnColor;
     }
     
     .TagCloudModule .tag-cloud > span.tag-el.add-tag {
-        background-color: #ff0258;
+        background-color: $highlightBtnColor;
         opacity: 0.7;
         transform: scale(0.7);
         line-height: 20px;
@@ -222,7 +222,7 @@ span.notifications:after {
     position: absolute;
     left: 9px;
     top: 5px;
-    color: #ff0258;
+    color: $highlightBtnColor;
 }
 
 [data-view="mainProjectsDetail"]>div>div>.ui-navigation-menu {
