--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -812,3 +812,17 @@ button.primary-btn.nav-new-btn:hover {
     margin: 15px 0px;
 }
 
+
+ul.user-roles li {
+    background-color: rgb(46 53 76);
+    border-radius: 100%;
+    padding: 2px;
+    background-size: 45%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+ul.user-roles li.active {
+     background-size: 70%;
+}
+
