--- a/app/purpleTheme.customCSS.css
+++ b/app/purpleTheme.customCSS.css
@@ -4,6 +4,10 @@ $purple:#2e344b; /*#0f1c4b;*/
 
 .ui-view.test.dashboard-main.gct3[data-view="dashboardLoader"] {
     background: $purple;
+    .application-logo {
+        color: white;
+        font-weight: 500;
+    }
 }
 
 .ui-view.left-panel {
