--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -798,15 +798,16 @@ button.primary-btn.nav-new-btn:hover {
 
 
 
-
+.field-value-module.inline.icon:before {
+    content: "\f1c0";
+     font-family: 'FontAwesome';
+}
 
 .is-dataset .field-value-module.inline.icon:before {
     content: "\f1b3";
 }
 
-.field-value-module.inline.icon:before {
-    content: "\f1c0";
-}
+
 
 
 
