--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -810,6 +810,10 @@ button.primary-btn.nav-new-btn:hover {
 }
 
 
+.is-basemap-layer [data-col="attachments"]:before{
+    content: "\f278";
+}
+
 
 
 
