administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -840,7 +840,7 @@ button.primary-btn.nav-new-btn:hover {
 
 
 ul.user-roles li {
-    background-color: rgb(46 53 76);
+    background-color: rgba(0,0,0,0.1);
     border-radius: 100%;
     padding: 2px;
     background-size: 45%;
