--- a/app/Generated Style Script.customCSS.css
+++ b/app/Generated Style Script.customCSS.css
@@ -45,12 +45,17 @@ $config=new core\Configuration('iconset');
     background-position: center;
     background-repeat: no-repeat;
 }
-<?php foreach(['community', 'townships', 'mining', 'forestry', 'boundary', 'crowdsource'] as $group){?>
+<?php foreach(['community', 'townships', 'mining', 'forestry', 'boundary', 'crowdsource', 'project'] as $group){?>
 .layer-group.<?php echo $group; ?>:before,
-.basemap-layer-<?php echo $group; ?> .inline-icon:before 
-
-{
-   background-image:url("<?php echo UrlFrom($config->getParameter($group)[0])."?tint=".$config->getParameter($group."Tint","rgb(0,0,0)"); ?>");
+.basemap-layer-<?php echo $group; ?> .inline-icon:before {
+   
+   <?php if(count($config->getParameter($group))){
+       ?>
+          background-image:url("<?php echo UrlFrom($config->getParameter($group)[0])."?tint=".$config->getParameter($group."Tint","rgb(0,0,0)"); ?>");
+       <?php
+       
+   }?>
+    
 }
 
 .layer-group.<?php echo $group; ?>{
