--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -471,12 +471,14 @@ ul.project, ul.user{
     width: 50px;
     height: 50px;
     float: right;
-    background: rgba(0,0,0,0.1);
+    
     border-radius: 100%;
     background-size: 50%;
     background-position: center;
     background-repeat: no-repeat;
-
+    
+   
+    
 }
 
 .ui-view.section-module.dataset-item {
@@ -485,9 +487,14 @@ ul.project, ul.user{
 
 
 
-.field-value-module.item-icon.left-icons.hasItems.items-2 {
-    width: 50px;
-    background: transparent;
+.field-value-module.item-icon.left-icons,
+    &.items-1 {
+        background: rgba(0,0,0,0.1);
+    }
+
+    &.items-2 {
+        width: 50px;
+    }
 }
 
 
