administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -487,7 +487,7 @@ ul.project, ul.user{
 
 
 
-.field-value-module.item-icon.left-icons,
+.field-value-module.item-icon.left-icons{
     &.items-1 {
         background: rgba(0,0,0,0.1);
     }
