--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -547,6 +547,11 @@ ul.project, ul.user{
     box-sizing: border-box;
     box-shadow: 0 0 3px rgb(0 0 0 / 70%);
     
+    
+    &.index-more-than-max{
+        display:none;
+    }
+    
     &.index-2 {
         left: 34px;
     }
