administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -578,6 +578,10 @@ ul.project, ul.user{
        .index-more-than-max{
             display:inline-block;
         }
+        
+        &:after{
+            display:none;
+        }
    }
 }
 
